--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dash==1.19.0
-dash-bootstrap-components==0.11.2
-Flask==1.1.2
+dash>=2.3.1
+dash-bootstrap-components>=1.0.0
+Flask>=2.1.0
 pandas==1.2.1
 requests==2.25.1
 SQLAlchemy>=1.4.22
