Create directory structure for activity files (Otherwise a fresh clone will throw an error about them not existing)

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ tokens*
 _wsgi.py
 data/
 tests/
-application/activity_files/
+application/activity_files/original/*?.*
+application/activity_files/csv/*?.*
 application/dataframe_operations.py
 application/mapmatching.py
 application/osmp.py
