--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -2,5 +2,7 @@ pytest
 selenium>=4
 webdriver_manager
 coverage
-# werkzeug>=2.3.0  # not yet released
+# werkzeug>=2.3.0  # not yet released. Workaround below.
+MarkupSafe>=2.1.1
 git+https://github.com/pallets/werkzeug
+-r requirements.txt
